Update mirage-fs doc to mirage-fs-0.5.0-20-g9bb0177.

--- a/Mirage_fs.html
+++ b/Mirage_fs.html
@@ -25,7 +25,7 @@
 MirageOS signatures for filesystem devices
 <p>
 
-    <em>mirage-fs-0.5.0-7-g563b0e1 </em><br>
+    <em>mirage-fs-0.5.0-20-g9bb0177 </em><br>
 </div>
 <hr width="100%">
 <br>
