--- a/index_modules.html
+++ b/index_modules.html
@@ -27,6 +27,12 @@ MirageOS signatures for filesystem devices
 MirageOS signatures for filesystem devices using Lwt.
 </div>
 </td></tr>
+<tr><td align="left"><br>T</td></tr>
+<tr><td><a href="Mirage_fs_lwt.To_KV_RO.html">To_KV_RO</a> [<a href="Mirage_fs_lwt.html">Mirage_fs_lwt</a>]</td>
+<td><div class="info">
+Consider a filesystem device as a key/value read-only store.
+</div>
+</td></tr>
 </table>
 </body>
 </html>
