--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       <div class="by-name">
       <h2>OCaml package documentation</h2>
       <ol>
-      <li><a href="mirage-fs/index.html">mirage-fs</a> <span class="version">1.2.0</span></li>
-      <li><a href="mirage-fs-lwt/index.html">mirage-fs-lwt</a></li>
+      <li><a href="mirage-fs/index.html">mirage-fs</a> <span class="version">2.0.0</span></li>
+      <li><a href="mirage-fs-lwt/index.html">mirage-fs-lwt</a> <span class="version">2.0.0</span></li>
       </ol>
       </div>
     </main>
